[package]
name = "bounded-str-test"
version = "0.1.4"
edition = "2024"

[dependencies]
bounded-str = { path = ".."}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["alloc", "serde", "zeroize", "constant-time"]
alloc = []
serde = []
zeroize = []
constant-time = []